fix popup double scroll

--- a/dev/sass/media/d.sass
+++ b/dev/sass/media/d.sass
@@ -467,8 +467,8 @@
 		margin-right: 80px
 		
 .adding
-	&-body
-		max-height: calc(100vh - 350px)
+	&-body,&-list
+		height: calc(100vh - 350px)
 		overflow-y: scroll
 	&-inner
 		+w(1200px)
